# kawsay-prediction-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  flake.nix  pyproject.toml
e2e-go/: generated-test.go  go.mod
e2e-go/api/: bulk_predict_test.go  model_behavior_test.go
e2e-go/data/: dtos.go
e2e-go/utils/: helper.go
src/: main.py
src/infrastructure/: onnx_model.py
src/kawsay/: main.py
src/kawsay/infrastructure/: onnx_model.py
src/kawsay/models/: domain.py
src/kawsay/services/: prediction_service.py
src/services/: prediction_service.py
